# pdfview

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/hungknow/pdfview/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/hungknow/pdfview/: FirstFragment.kt  IOExtensions.kt  MainActivity.kt  SamplesApplication.kt  SecondFragment.kt
app/src/main/res/layout/: activity_main.xml  fragment_first.xml
app/src/main/res/menu/: options.xml
app/src/main/res/navigation/: nav_graph.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/hungknow/pdfview/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
pdfsdk/: build.gradle
pdfsdk/src/androidTest/java/com/hungknow/pdfsdk/: ExampleInstrumentedTest.kt  FileUtils.kt  PdfiumSDKTest.kt
pdfsdk/src/main/: AndroidManifest.xml
pdfsdk/src/main/cpp/: CMakeLists.txt  comm.h  pdfsdk_jni.cpp
pdfsdk/src/main/cpp/utils/: CMakeLists.txt  hk_file.cpp  hk_file.h
pdfsdk/src/main/java/com/hungknow/pdfsdk/: AnimationManager.kt  CacheManager.kt  DecodingAsyncTask.kt  DragPinchManager.kt  PagesLoader.kt  PdfDocument.kt  PdfDocumentMeta.kt  PdfFile.kt  PdfView.kt  PdfiumSDK.kt  RenderingHandler.kt
pdfsdk/src/main/java/com/hungknow/pdfsdk/exceptions/: PageRenderingException.kt
pdfsdk/src/main/java/com/hungknow/pdfsdk/link/: DefaultLinkHandler.kt  LinkHandler.kt
pdfsdk/src/main/java/com/hungknow/pdfsdk/listeners/: Callbacks.kt  OnDrawListener.kt  OnErrorListener.kt  OnLoadCompleteListener.kt  OnLongPressListener.kt  OnPageChangeListener.kt  OnPageErrorListener.kt  OnPageScrollListener.kt  OnRenderListener.kt  OnTapListener.kt
pdfsdk/src/main/java/com/hungknow/pdfsdk/models/: LinkTapEvent.kt  PagePart.kt  Size.kt  SizeF.kt
pdfsdk/src/main/java/com/hungknow/pdfsdk/scroll/: DefaultScrollHandle.kt  ScrollHandle.kt
pdfsdk/src/main/java/com/hungknow/pdfsdk/source/: AssetSource.kt  DocumentSource.kt
pdfsdk/src/test/java/com/hungknow/pdfsdk/: ExampleUnitTest.kt
(+5 files in other folders)
